--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Nutripekesandroid">
         <activity
+            android:name=".MenuBar"
+            android:exported="false"
+            android:label="@string/title_activity_menu_bar"
+            android:theme="@style/Theme.Nutripekesandroid" />
+        <activity
+            android:name=".MenuBar.kt"
+            android:exported="false"
+            android:label="@string/title_activity_menu_bar.kt"
+            android:theme="@style/Theme.Nutripekesandroid" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
